--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   <title>TrailBlix</title>
+  
+  <!-- PRECONNECT for better font performance -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  
+  <!-- Montserrat with weights 400, 600, 700 -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap"
+    rel="stylesheet"
+  />
+  
   <!-- Favicon attribution: https://creativecommons.org/licenses/by/3.0/ -->
 </head>
 
@@ -13,5 +23,4 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 </body>
-
 </html>
